добавил файл с html кодом
для проверки первого ДЗ

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,123 @@
 	<title>Иван Тамбовцев - Веб-разработчик.</title>
 </head>
 <body>
-	
+	<header>
+		<nav>
+		<div class="logo">Иван Тамбовцев</div>
+		<div class="menu">
+			<ul>
+				<li>Обо мне</li>
+				<li>Услуги</li>
+				<li>Кейсы</li>
+				<li>Прайс</li>
+				<li>Отзывы</li>
+				<li>Контакты</li>
+			</ul>
+		</div>
+		</nav>
+	</header>
+<div class="main"> <div class="title__container">
+	<h1>Привет <br/>Я Иван Тамбовцев</h1>
+	<h4>Фулл стек, Веб-разработчик</h4>
+	<input type="submit" value="Обо мне">
+	<input type="submit" value="Мои Работы">
+</div></div>
+<div class="about_me">
+	<h3>ОБО МНЕ</h3>
+	<hr width="40px">
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Laboriosam expedita labore voluptas libero asperiores dolor deserunt totam ad soluta tenetur.</p>
+	<p>Lorem ipsum dolor sit, amet, consectetur adipisicing elit. Odio unde incidunt, vitae ab amet quas ex laborum eius. A, laudantium at veritatis accusantium repudiandae libero ad voluptate sed omnis architecto!</p>
+	<input type="submit" value="Скачать резюме">
+</div>
+<div class="my_abilities"><div class="abilities_container">
+	<h3>ЧТО Я УМЕЮ</h3>
+	<hr width="40px">
+	<ul>
+		<li><b>Веб-дизайн</b><br/>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequuntur, porro!</li>
+		<li><b>Разработка</b><br/>Lorem ipsum dolor, sit amet consectetur adipisicing, elit. Officiis dolor aspernatur sint at numquam repellendus.</li>
+		<li><b>СЕО-Оптимизация</b><br/>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorem, amet.</li>
+		<li><b>Маркетинг</b><br/>Lorem, ipsum, dolor sit amet consectetur adipisicing elit. Ad, perferendis.</li>
+	</ul>
+</div></div>
+<div class="cases">
+	<h3>КЕЙСЫ</h3>
+	<hr width="40px">
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore nisi vero tenetur cum reiciendis eos quis facilis quisquam, maxime delectus.</p>
+	<!--тут не понял надо прописывать (OPEN CLOUD)? Или это будет вставка как картинка или типа стилей-->
+	<p><b>CLIENT:</b><br>
+	<small>какая то компания</small></p>
+	<p><b>WEBSITE:</b><br>
+		<small>www.somedomein.com</small></p>
+	<p><b>Название проекта</b><br>
+	Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam corporis iure excepturi accusantium tempora dolore at ducimus tenetur esse? Eius rerum ex ad molestias dignissimos explicabo vel ipsa eveniet repellat.</p>
+	<input type="submit" value="VISIT LIVE SITE">
+</div>
+<div class="price">
+	<h3>Расчет стоимости</h3>
+	<h4>Тип сайта</h4>
+	<select name="type_of_website" id="list">
+		<option value="point">Выберите пункт...</option>
+		<option value="landing">Лендинг(одностраничные)</option>
+		<option value="card">Визитка</option>
+		<option value="corporate">Корпоративный</option>
+		<option value="market">Интернет-магазин</option>
+	</select>
+	<h4>Дизайн</h4>
+	<select name="design" id="list">
+		<option value="point">Выберите пункт...</option>
+		<option value="">Готовый дизайн (исходники заказчика)</option>
+		<option value="">Готовый шаблонный дизайн (заказчик выбирает из предложеных вариантов)</option>
+		<option value="">Разработка индивидуального дизайна</option>
+	</select>
+	<h4>Адаптивность</h4>
+	<select name="adaptability" id="list">
+	<option value="point">Выберите пункт...</option>
+	<option value="">Компьютер (ПК)</option>
+	<option value="">Мобильные телефоны, планшеты</option>
+	<option value="">Адаптивный сайт ко всем устройствам</option>
+	</select>
+</div>
+<div class="statistics"><div class="statistics_container">
+	<h3>НЕМНОГО СТАТИСТИКИ</h3>
+	<hr width="40px">
+	<ul>
+		<li><p><b>0</b></p>
+		<p>счастливых клиентов</p></li>
+		<li><p><b>5</b></p>
+		<p>часов работы</p></li>
+		<li><p><b>0</b></p>
+		<p>проектов завершено</p></li>
+		<li><p><b>0</b></p>
+		<p>наград получено</p></li>
+	</ul>
+</div></div>
+<div class="reviews"><div class="reviews_container">
+	<h3>ОТЗЫВЫ</h3>
+	<hr width="40px">
+	<p>Lorem ipsum dolor sit, amet consectetur adipisicing, elit. Sint, aut!</p>
+	<p><b>Михаил</b>,Ген директор ПАО "Газпром"</p>
+</div></div>
+<div class="contacts"><div class="contacts_container">
+	<h3>МОИ КОНТАКТЫ</h3>
+	<hr width="40px">
+	<p>Lorem ipsum dolor sit amet consectetur adipisicing, elit. Nostrum, cum?</p>
+		<ul>
+			<li><p>Санкт-Питербург <br> Невский проспект 11</p></li>
+			<li><p>info@companyname.com</p></li>
+			<li><p>+7(999)999-99-99</p></li>
+		</ul>
+	<h4>ОСТАВЬТЕ МНЕ СООБЩЕНИЕ</h4>
+	<form action="#">
+		<input name="name" type="text"  value="Имя">
+		<input name="mail" type="email" value="Email" ><br>
+		<textarea name="massage" id="1" cols="30" rows="10">Сообщение</textarea><br>
+		<input type="submit" value="Отправить">
+	</form>
+<footer><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1122.413327546282!2d37.62371919392181!3d55.761513399999984!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x46b54a5ce60291c1%3A0x3882ebd6d9916d33!2z0YPQuy4g0JrRg9C30L3QtdGG0LrQuNC5INCc0L7RgdGCLCAyMiDRgdGC0YDQvtC10L3QuNC1IDQsINCc0L7RgdC60LLQsCwgTW9zY293IE9ibGFzdCwgMTA3MDMx!5e0!3m2!1sru!2sru!4v1637762402374!5m2!1sru!2sru" width="1300" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe></iframe></footer>
+
+
+
+
+</div></div>
 </body>
 </html>
